...
    ContactCountryCallingCode("France", "FR", "+33"),
    ContactCountryCallingCode("French Guiana", "GF", "+594"),
    ContactCountryCallingCode("French Polynesia", "PF", "+689"),
    ContactCountryCallingCode("Gabon", "GA", "+241"),
    ContactCountryCallingCode("Gambia", "GM", "+220"),
    ContactCountryCallingCode("Georgia", "GE", "+995"),
    ContactCountryCallingCode("Germany", "DE", "+49"),
    ContactCountryCallingCode("Ghana", "GH", "+233"),
    ContactCountryCallingCode("Gibraltar", "GI", "+350"),
    ContactCountryCallingCode("Greece", "GR", "+30"),
    ContactCountryCallingCode("Greenland", "GL", "+299"),
    ContactCountryCallingCode("Grenada", "GD", "+1"),
    ContactCountryCallingCode("Guadeloupe", "GP", "+590"),
...
    ContactCountryCallingCode("Guyana", "GY", "+592"),
    ContactCountryCallingCode("Haiti", "HT", "+509"),
    ContactCountryCallingCode("Honduras", "HN", "+504"),
    ContactCountryCallingCode("Hong Kong", "HK", "+852"),
    ContactCountryCallingCode("Hungary", "HU", "+36"),
    ContactCountryCallingCode("Iceland", "IS", "+354"),
    ContactCountryCallingCode("India", "IN", "+91"),
    ContactCountryCallingCode("Indonesia", "ID", "+62"),
    ContactCountryCallingCode("Iran", "IR", "+98"),
    ContactCountryCallingCode("Iraq", "IQ", "+964"),
    ContactCountryCallingCode("Ireland", "IE", "+353"),
    ContactCountryCallingCode("Isle of Man", "IM", "+44"),
    ContactCountryCallingCode("Israel", "IL", "+972"),
...
