...
        text = {
            Column {
                Text("Choose how to add an image.")
                TextButton(
                    onClick = onCamera,
                    modifier = Modifier.fillMaxWidth()
                ) { Text("Camera") }
                TextButton(
                    onClick = onGallery,
                    modifier = Modifier.fillMaxWidth()
                ) { Text("Photo Gallery") }
            }
        },
        confirmButton = {
            TextButton(onClick = onDismiss) { Text("Cancel") }
        },
        dismissButton = null
...
